# todo-list-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TodoList.pro  TodoView.qml  add-todo.qml  addtodoviewmodel.cpp  help.qml  list.qml  listviewmodel.cpp  listviewmodel.h  main.cpp  main.qml  qml.qrc  todolist.cpp  todolist.h  todomodel.cpp  todomodel.h
android/: AndroidManifest.xml
android/sources/: AndroidManifest.xml
include/: addtodoviewmodel.h  listviewmodel.h  todolist.h
resource/: qml.qrc
resource/macos/: Info.plist
resource/qml/: MyButton.qml  add-todo.qml
resource/windows/: installer.nsi
src/: addtodoviewmodel.cpp  listviewmodel.cpp  main.cpp  todomodel.cpp
windows/: installer.nsi
